Fix some spacing and background issues

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,6 +11,10 @@
 //   font-weight: normal;
 // }
 
+body {
+  min-height: 100vh;
+}
+
 a,
 .green {
   text-decoration: none;
@@ -33,6 +37,7 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 3fr;
+    column-gap: 1rem;
     padding: 0 2rem;
   }
 }
